mime type file; docker; minimal frontend

--- a/nginx-server/conf/servers/server.conf
+++ b/nginx-server/conf/servers/server.conf
@@ -4,12 +4,12 @@ server {
 
   location / {
     proxy_pass http://www.google.co.uk;
-    access_by_lua_file main.lua;
+    access_by_lua_file lualib/main.lua;
   }
 
   location = /auth {
     lua_need_request_body on;
-    access_by_lua_file auth.lua;
+    access_by_lua_file lualib/auth.lua;
   }
 
   location = /form.html {
@@ -17,7 +17,7 @@ server {
   } 
 
   location /form {
-    include /usr/local/openresty/nginx/conf/mime.types;
+    include conf/mime.types;
     root public;
   }
 
