--- a/nginx-server/conf/nginx.conf
+++ b/nginx-server/conf/nginx.conf
@@ -1,5 +1,8 @@
 worker_processes  1;
 
+# allows file edits on *_by_lua_file directives without having to reload. Changes on .conf files still 
+# need nginx reload  
+lua_code_cache off 
 error_log logs/error.log;
 env COOKIE_NAME=Token;
 
